problems/ecom_app/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ecommerce
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
