problems/ecom_app/service_cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8080
